option java_multiple_files = false;
option java_package = "example.protobuf.idl";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
   required string name = 1;
}

message HelloResponse {
 required string message = 1;
}